# OpenJax

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  OVERVIEW.md  README.md  README.zh-CN.md  SECURITY.md  pyrightconfig.json  test.md  test.txt  test_apply_patch_e2e.sh
openjax-cli/: Cargo.toml  config.toml.example
openjax-cli/src/: main.rs  update.rs
openjax-cli/tests/: e2e_cli.rs
openjax-core/: Cargo.toml  README.md
openjax-core/src/: approval.rs  builtin_catalog.rs  config.rs  lib.rs  logger.rs  model.rs  paths.rs  provider_store.rs  tests.rs  tools.rs
openjax-core/src/agent/: README.md  bootstrap.rs  context_compressor.rs  decision.rs  events.rs  execution.rs  lifecycle.rs  loop_detector.rs  mod.rs  planner.rs  planner_stream_flow.rs  planner_tool_action.rs  planner_tool_batch.rs  planner_utils.rs  policy_level.rs  prompt.rs  runtime_policy.rs  state.rs  tool_executor.rs  tool_guard.rs  tool_lifecycle.rs  tool_policy.rs  tool_projection.rs  turn.rs  turn_engine.rs
openjax-core/src/dispatcher/: errors.rs  metrics.rs  mod.rs  probe.rs  route_tool.rs  state_machine.rs
openjax-core/src/model/: README.md  anthropic_messages.rs  chat_completions.rs  client.rs  echo.rs  factory.rs  missing_config.rs  mod.rs  registry.rs  router.rs  types.rs
openjax-core/src/sandbox/: README.md  audit.rs  classifier.rs  degrade.rs  mod.rs  policy.rs  result.rs  types.rs
openjax-core/src/skills/: errors.rs  loader.rs  manifest.rs  matcher.rs  mod.rs  prompt.rs  registry.rs  types.rs
openjax-core/src/slash_commands/: builtin.rs  dispatch.rs  kinds.rs  mod.rs  registry.rs
openjax-core/src/streaming/: README.md  event.rs  helpers.rs  mod.rs  orchestrator.rs  replay.rs  sink.rs
openjax-core/src/tests/: duplicate_guard.rs  mod.rs  prompt_and_policy.rs  streaming.rs  support.rs  tool_batch_approval.rs
openjax-core/src/tools/: README.md  apply_patch.rs  apply_patch_interceptor.rs  common.rs  context.rs  dynamic.rs  error.rs  events.rs  exec_command.rs  grep_files.rs  hooks.rs  list_dir.rs  mod.rs  orchestrator.rs  policy.rs  read_file.rs  registry.rs  router.rs  router_impl.rs  sandbox_runtime.rs  sandboxing.rs  shell.rs  spec.rs  tool_builder.rs
openjax-core/tests/: approval_events_suite.rs  approval_suite.rs  core_history_suite.rs  m10_skills_discovery.rs  m11_context_compression.rs  m11_skills_prompt_injection.rs  m12_skills_config_toggle.rs  m13_skills_duplicate_resolution.rs  m18_skills_no_shell_trigger_misfire.rs  m19_skills_lightweight_commit_flow.rs  m20_skills_shell_trigger_guard.rs  m21_tool_streaming_events.rs  m22_history_turn_record.rs  m23_assistant_message_decommission_guardrails.rs  m3_sandbox.rs  m4_apply_patch.rs  m5_approval_handler.rs  m5_edit_file_range.rs  m6_submit_stream.rs  m7_backward_compat_submit.rs  m8_approval_event_emission.rs  m8_loop_detector.rs  m9_system_tools.rs  policy_center_suite.rs  skills_suite.rs  streaming_suite.rs  tools_sandbox_suite.rs
openjax-core/tests/approval/: m5_approval_handler.rs  m8_approval_event_emission.rs
openjax-core/tests/core_history/: m11_context_compression.rs  m22_history_turn_record.rs  m8_loop_detector.rs
openjax-core/tests/skills/: m10_skills_discovery.rs  m11_skills_prompt_injection.rs  m12_skills_config_toggle.rs  m13_skills_duplicate_resolution.rs  m19_skills_lightweight_commit_flow.rs  m20_skills_shell_trigger_guard.rs
openjax-core/tests/streaming/: m21_tool_streaming_events.rs  m23_assistant_message_decommission_guardrails.rs  m6_submit_stream.rs  m7_backward_compat_submit.rs
openjax-core/tests/tool/: test_apply_patch_e2e.sh
openjax-core/tests/tools_sandbox/: m10_write_file.rs  m11_glob_files.rs  m12_string_args_compat.rs  m3_sandbox.rs  m4_apply_patch.rs  m5_edit.rs  m5_edit_file_range.rs  m9_system_tools.rs
openjax-gateway/: Cargo.toml  README.md
openjax-gateway/src/: auth.rs  auth_handlers.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  state.rs  stdio.rs
openjax-gateway/src/auth/: cookie.rs  mod.rs  rate_limit.rs  service.rs  store.rs  token.rs  types.rs
openjax-gateway/src/event_mapper/: approval.rs  mod.rs  response.rs  tool.rs
openjax-gateway/src/handlers/: mod.rs  policy.rs  provider.rs  session.rs  slash_commands.rs  stream.rs
openjax-gateway/src/persistence/: mod.rs  repository.rs  sqlite.rs  types.rs
openjax-gateway/src/state/: config.rs  core_projection.rs  events.rs  mod.rs  publish_pipeline.rs  runtime.rs  turn_orchestrator.rs
openjax-gateway/src/stdio/: daemon.rs  dispatch.rs  mod.rs  protocol.rs
openjax-gateway/src/transcript/: mod.rs  session_index_store.rs  session_index_types.rs  store.rs  types.rs
openjax-gateway/tests/: .smoke-targets  gateway_api.rs  gateway_api_suite.rs  m1_assistant_message_compat_only.rs  policy_api_suite.rs
openjax-gateway/tests/gateway_api/: helpers.rs  m1_auth.rs  m2_session_lifecycle.rs  m3_slash_and_compact.rs  m4_approval.rs  m5_stream_and_timeline.rs  m6_provider.rs  m7_policy_level.rs  m8_transcript_store.rs  m9_session_index_store.rs  mod.rs
openjax-gateway/tests/policy_api/: helpers.rs  m1_publish.rs  m2_rules_crud.rs  mod.rs  (+3 more)
openjax-tui/: Cargo.toml  README.md
openjax-tui/src/: app.rs  app_event.rs  approval.rs  chatwidget.rs  custom_terminal.rs  insert_history.rs  lib.rs  main.rs  state.rs  tui.rs
openjax-tui/tests/: m10_chat_view_layout.rs  m11_chat_scroll_visual.rs  m12_inline_history_scrollback.rs  m13_viewport_resize.rs  m14_alt_screen_behavior.rs  m15_inline_no_duplicate_history.rs  m16_cursor_restore_after_history_insert.rs  m17_streaming_history_commit_boundary.rs  m1_app_state.rs  m2_event_mapping.rs  m3_render_smoke.rs  m4_approval_overlay.rs  m5_streaming_merge.rs  m6_markdown_render.rs  m7_keymap.rs  m8_terminal_restore.rs  m9_tui_approval_handler.rs
openjaxd/: Cargo.toml  README.md
openjaxd/src/: main.rs
openjaxd/tests/: protocol_integration.rs
python/openjax_sdk/: README.md  pyproject.toml  pyrightconfig.json
python/openjax_tui/: README.md  pyproject.toml  pyrightconfig.json
python/tui/: README.md  pyproject.toml
ui/tui/: Cargo.toml  README.md
(+803 files in other folders)
