[workspace]
members = [
  "openjax-protocol",
  "openjax-store",
  "openjax-core",
  "openjaxd",
  "ui/tui",
  "openjax-gateway",
  "openjax-policy",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.2.14"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
once_cell = "1.19"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shlex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs", "process", "time", "io-std", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
time = { version = "0.3", features = ["local-offset", "macros", "formatting"] }
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
pretty_assertions = "1"
which = "6"
sysinfo = "0.33"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
