[package]
name = "openjax-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
dirs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
walkdir.workspace = true
uuid.workspace = true
openjax-protocol = { path = "../openjax-protocol" }
tempfile.workspace = true
pretty_assertions.workspace = true
which.workspace = true
