[package]
name = "openjax-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
once_cell.workspace = true
thiserror.workspace = true
dirs.workspace = true
glob = "0.3"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shlex.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
walkdir.workspace = true
uuid.workspace = true
openjax-protocol = { path = "../openjax-protocol" }
openjax-policy = { path = "../openjax-policy" }
openjax-store = { path = "../openjax-store" }
tempfile.workspace = true
pretty_assertions.workspace = true
which.workspace = true
sysinfo.workspace = true
