[package]
name = "openjax-gateway"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
async-trait.workspace = true
axum = { version = "0.7", features = ["macros"] }
futures-util = "0.3"
openjax-core = { path = "../openjax-core" }
openjax-policy = { path = "../openjax-policy" }
openjax-protocol = { path = "../openjax-protocol" }
openjax-store = { path = "../openjax-store" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
tower-http = { version = "0.6", features = ["cors", "fs"] }
rusqlite.workspace = true
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tokio.workspace = true
tower = "0.5"
