[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openjax-tui"
version = "0.1.0"
description = "OpenJax TUI - A modern terminal UI for OpenJax"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "OpenJax Team" },
]
keywords = ["openjax", "tui", "cli", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openjax-sdk>=0.1.0",
    "textual>=0.52.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-textual-snapshot>=0.4.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
openjax-tui = "openjax_tui:main"

[project.urls]
Homepage = "https://github.com/openjax/openjax"
Repository = "https://github.com/openjax/openjax"

[tool.hatch.build.targets.wheel]
packages = ["src/openjax_tui"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
